Bug 1497221 - Fix warnings in nsNativeThemeWin.cpp when built with clang r=jmathies

nsNativeThemeWin.cpp has a lot of warnings at build time.  They hides preceding
errors and warning due to too many.  This patch avoids the warnings with:

- adding |default| case of each |switch| statement with widget type.
- removing unused overload of ScaleForFrameDPI().

Differential Revision: https://phabricator.services.mozilla.com/D8055